@@ -35,7 +35,7 @@ again. If one particular file seems to cause problems, I could use Skip
 to skip that file and continue with the rest of the files, without 
 having to cancel and select the other files by hand.
 
-*Selecting multiple files is a little strange. Ctrl and Shift keys while 
+* Selecting multiple files is a little strange. Ctrl and Shift keys while 
 clicking in the lists work as expected, but unlike with other programs 
 like Konqueror, I cannot use both Ctrl and Shift at the same time. TiLP 
 acts like I only pressed Ctrl. It would be nice if Ctrl+Shift worked as 
@@ -64,7 +64,7 @@ PROBLEMS:
 
 TI-89--
 
-*Every time I send a variable to my TI-89:
+* Every time I send a variable to my TI-89:
 
 1. TiLP always gets a list of the files on the calc, even if I already 
 did it (which is time-consuming)
@@ -73,7 +73,7 @@ when they don't. The list showing the variables is blank, because the
 variables do not exist on the calculator. Usually picking Overwrite will 
 send the files without problems, but it's annoying.
 
-*TiLP detects these files in the Main folder if statistics operations 
+* TiLP detects these files in the Main folder if statistics operations 
 were performed on the TI-89:
    -regCoef
    -regEq
@@ -82,14 +82,14 @@ these files, so they produce an error in TiLP when the user tries to
 transfer them or when a backup is performed. Maybe TiLP should not 
 display these files (or at least ignore them when making a backup).
 
-*The dumprom program that gets sent to the TI-89 when sending the 
+* The dumprom program that gets sent to the TI-89 when sending the 
 operating system to the computer erases the line above the calc's status 
 bar and does not restore it. TiLP does not warn that this will happen, 
 and it doesn't send a program (such as dumpfix) to correct it.
 
 TI-86--
 
-*The names of variables containing Greek characters are not listed in 
+* The names of variables containing Greek characters are not listed in 
 TiLP correctly. If the names contain Greek characters, the Greek 
 character and all characters after it are missing. For files whose names 
 begin with Greek characters, there is no name displayed at all (the name 
